--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Virender Singh",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
@@ -25,6 +26,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
