--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
-  }
+  },
+  "devDependencies": {}
 }
