--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is placement website help to student to face interview according their skills",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
